fix best score display

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
   <!-- Start Screen & Auth -->
   <div id="start-screen">
+    <div id="debugBox" style="position:fixed;top:1.2em;left:50%;transform:translateX(-50%);z-index:2000;background:#1a3563;padding:0.8em 1.4em;border-radius:1em;color:#fff;font-size:1.1em;box-shadow:0 6px 16px #0a0a2011;max-width:90vw;word-break:break-all;display:none;"></div>
+
     <div id="user-info" class="hidden">
       <span class="label" id="auth-loading">🔄 Authenticating...</span>
       <span class="label hidden">🔵 Pi Username:</span>
