touch screen size

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 
   <!-- Fade Overlay -->
   <div id="fade-screen"></div>
+  <div id="touch-overlay"></div>
   <script src="game.js" defer></script>
 </body>
 </html>
