--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <div class="start-cloud four"></div>
 
     <h1>TRICKY<br/>TURNS</h1>
+    <div id="modesPicker" class="btn-primary"></div>
     <button class="btn-primary" id="startBtn" type="button">TAP TO START</button>
     <button class="btn-primary" id="viewLeaderboardBtn" type="button">VIEW LEADERBOARD</button>
 
