--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     <div class="start-cloud four"></div>
 
     <h1>TRICKY<br/>TURNS</h1>
-    <div id="modesPicker"></div>
+    <div id="modesPicker" style="margin:1.5em 0 0.6em 0;display:flex;flex-direction:column;align-items:center;gap:1.1em;"></div>
+
     <button class="btn-primary" id="viewLeaderboardBtn" type="button">VIEW LEADERBOARD</button>
 
     <div class="orbit">
