--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <div class="leaderboard-wrapper">
       <div class="leaderboard-sticky">
         <button id="closeLeaderboardBtn" aria-label="Close leaderboard" type="button">✕</button>
+        <div class="leaderboard-modes-tabs" id="leaderboardModesTabs"></div>
         <h2 id="leaderboardHeader">Top 100 Leaderboard</h2>
         <div class="leaderboard-columns">
           <span class="col-rank"># | User</span>
