--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
           <span class="col-score">Score</span>
         </div>
       </div>
+      <div id="myRankBar" class="my-rank-bar" style="display:none;"></div>
+
       <ol id="leaderboardEntriesHome"></ol>
     </div>
   </div>
