restyled modes for mobile and rank info

--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
       <div class="leaderboard-sticky">
         <button id="closeLeaderboardBtn" aria-label="Close leaderboard" type="button">✕</button>
         <div class="leaderboard-modes-tabs" id="leaderboardModesTabs"></div>
-        <h2 id="leaderboardHeader">Top 100 Leaderboard</h2>
+        <div id="leaderboardHeaderBar" class="leaderboard-header-bar">
+  <h2 id="leaderboardHeader">Top 100 Leaderboard</h2>
+  <span id="userRankMiniBadge" style="display:none;"></span>
+</div>
+
         <div class="leaderboard-columns">
           <span class="col-rank"># | User</span>
           <span class="col-score">Score</span>
